--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -4,11 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 練習時間\n",
+    "# 練習時間\n",
     "#### 請寫一個函式用來計算 Mean Square Error\n",
     "$ MSE = \\frac{1}{n}\\sum_{i=1}^{n}{(Y_i - \\hat{Y}_i)^2} $\n",
     "\n",
     "### Hint: [如何取平方](https://googoodesign.gitbooks.io/-ezpython/unit-1.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "作業1\n",
+    "Two Sigma: Using News to Predict Stock Movements\n",
+    "Use news analytics to predict stock price performance\n",
+    "https://www.kaggle.com/c/two-sigma-financial-news/overview\n",
+    "內容是以金融新聞資料試圖預測股價，希望能帶給投資大眾有別於以往基本技術面分析的新指標及方法\n",
+    "新聞資料來源由路透社提供，數據資料則由Intrinio提供\n",
+    "新聞資料為文字型態，內容文新聞文章、評論等\n",
+    "數據方面則有股票價格及交易量等數值資料\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "作業2\n",
+    "我認為要提升車隊業績應該以提高運客效率為主，在旅客分布較密集處派遣較多車輛，讓旅客待車時間減少、司機前往接駁路途縮短\n",
+    "這樣的目標需要即時道路資訊以及歷史旅客乘車分布資訊，前者可參考交通部或是Google即時路況，資料型態為地圖影像加上目前車況，歷史乘車資訊則由平台及司機端蒐集，資料型態為地圖散布圖\n",
+    "驗證結果的方式應檢測使用方案前後旅客待車時間差異以及司機接駁路途差異作為依據\n"
    ]
   },
   {
